Fix hover color, change default color to filament default

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -343,7 +343,7 @@
   }
 
   .daterangepicker .ranges li:hover {
-    color: #fff;
+      @apply text-primary-500 bg-white !important
   }
 
   .daterangepicker .ranges li.active {
