--- a/resources/css/filament-daterangepicker.css
+++ b/resources/css/filament-daterangepicker.css
@@ -160,7 +160,6 @@
     font-size: 12px;
     border-radius: 4px;
     border: 1px solid transparent;
-    white-space: nowrap;
     cursor: pointer;
   }
 
@@ -180,10 +179,14 @@
   }
 
   .daterangepicker td.available:hover, .daterangepicker th.available:hover {
-    /*background-color: #eee;*/
-    /*@apply dark:bg-gray-500;*/
+    background-color: #eee;
+    @apply dark:bg-gray-500;
     border-color: transparent;
-    /*color: inherit;*/
+    color: inherit;
+  }
+
+  .next.available span , .prev.available span{
+      @apply dark:border-white !important;
   }
 
   .daterangepicker td.week, .daterangepicker th.week {
