Add 24-hour and seconds options to date range picker
This update introduces options for 24-hour and seconds selection to the date range picker component. It also includes necessary styling adjustments for these new options in the application's CSS. Some older methods have been marked as deprecated, and the new methods have been used instead.

--- a/resources/css/filament-daterangepicker.css
+++ b/resources/css/filament-daterangepicker.css
@@ -29,6 +29,12 @@
     content: '';
 }
 
+.daterangepicker .hourselect , .daterangepicker .minuteselect , .daterangepicker .secondselect {
+    @apply dark:bg-gray-800;
+    @apply dark:border-gray-700;
+    @apply bg-white;
+}
+
 .daterangepicker:before {
     top: -7px;
     border-right: 7px solid transparent;
