Support lazy loaded css, js

--- a/resources/css/filament-daterangepicker.css
+++ b/resources/css/filament-daterangepicker.css
@@ -297,6 +297,17 @@
     width: 56%;
 }
 
+
+html[dir="rtl"] .daterangepicker select.monthselect , html[dir="rtl"] .daterangepicker select.yearselect {
+    direction: rtl;
+    padding-right: 5%;
+
+
+
+}
+
+
+
 .daterangepicker select.yearselect {
     width: 40%;
 }
